# next.js

./: Cargo.toml  package.json  pnpm-lock.yaml
crates/next-api/src/: app.rs  instrumentation.rs  middleware.rs  pages.rs  project.rs  server_actions.rs  webpack_stats.rs
crates/next-core/src/: app_structure.rs  hmr_entry.rs  next_import_map.rs  next_telemetry.rs  page_loader.rs  pages_structure.rs  transform_options.rs  util.rs
crates/next-core/src/next_app/: app_client_references_chunks.rs  app_route_entry.rs  include_modules_module.rs
crates/next-core/src/next_app/metadata/: route.rs
crates/next-core/src/next_client/: context.rs
crates/next-core/src/next_client_reference/: visit_client_reference.rs
crates/next-core/src/next_client_reference/css_client_reference/: css_client_reference_module.rs
crates/next-core/src/next_client_reference/ecmascript_client_reference/: ecmascript_client_reference_module.rs
crates/next-core/src/next_dynamic/: dynamic_module.rs
crates/next-core/src/next_edge/: context.rs  entry.rs  unsupported.rs
crates/next-core/src/next_font/: font_fallback.rs
crates/next-core/src/next_font/google/: font_fallback.rs  mod.rs  options.rs  util.rs
crates/next-core/src/next_font/local/: font_fallback.rs  mod.rs  request.rs
crates/next-core/src/next_image/: source_asset.rs
crates/next-core/src/next_manifests/: client_reference_manifest.rs
crates/next-core/src/next_pages/: page_entry.rs
crates/next-core/src/next_route_matcher/: path_regex.rs
crates/next-core/src/next_server/: context.rs  resolve.rs  transforms.rs
crates/next-core/src/next_server_component/: server_component_module.rs  server_component_reference.rs
crates/next-core/src/next_server_utility/: server_utility_module.rs  server_utility_reference.rs
crates/next-core/src/next_shared/: resolve.rs
crates/next-core/src/next_shared/transforms/: next_dynamic.rs  next_page_static_info.rs  next_track_dynamic_imports.rs
crates/next-core/src/next_shared/webpack_rules/: babel.rs  sass.rs
crates/next-custom-transforms/src/: chain_transforms.rs
crates/next-custom-transforms/src/transforms/: dynamic.rs  track_dynamic_imports.rs
crates/next-custom-transforms/tests/: fixture.rs  full.rs
crates/next-error-code-swc-plugin/src/: lib.rs
test/development/basic/: next-rs-api.test.ts
test/development/basic/hmr/: error-recovery.test.ts
test/e2e/app-dir/actions/: app-action.test.ts
test/e2e/app-dir/use-cache/: use-cache.test.ts
test/e2e/config-turbopack/: index.test.ts
test/e2e/manual-client-base-path/: index.test.ts
test/e2e/socket-io/: index.test.ts
test/integration/app-document-style-fragment/test/: index.test.js
test/integration/next-dynamic-lazy-compilation/test/: index.test.js
test/integration/next-dynamic/test/: index.test.js
test/integration/preview-fallback/test/: index.test.js
test/integration/query-with-encoding/test/: index.test.js
test/integration/render-error-on-module-error/test/: index.test.js
test/integration/render-error-on-top-level-error/with-get-initial-props/test/: index.test.js
test/integration/render-error-on-top-level-error/without-get-initial-props/test/: index.test.js
test/integration/repeated-slashes/test/: index.test.js
test/integration/required-server-files-ssr-404/test/: index.test.js
test/integration/route-load-cancel-css/test/: index.test.js
test/integration/route-load-cancel/test/: index.test.js
test/integration/script-loader/test/: index.test.js
test/integration/server-side-dev-errors/test/: index.test.js
test/lib/: create-next-install.js  next-webdriver.ts
test/production/build-lifecycle-hooks/: index.test.ts
turbopack/crates/turbo-persistence/src/: collector.rs  db.rs  write_batch.rs
turbopack/crates/turbo-rcstr/: Cargo.toml
turbopack/crates/turbo-rcstr/src/: lib.rs
turbopack/crates/turbo-tasks-backend/src/: data.rs
turbopack/crates/turbo-tasks-backend/src/backend/: mod.rs
turbopack/crates/turbo-tasks-backend/src/database/: turbo.rs
turbopack/crates/turbo-tasks-fs/src/: lib.rs  virtual_fs.rs
turbopack/crates/turbo-tasks-macros/src/: lib.rs
turbopack/crates/turbo-tasks/src/: util.rs
turbopack/crates/turbopack-browser/src/: chunking_context.rs  react_refresh.rs
turbopack/crates/turbopack-browser/src/ecmascript/: chunk.rs
turbopack/crates/turbopack-cli/src/: contexts.rs  util.rs
turbopack/crates/turbopack-cli/src/dev/: mod.rs  web_entry_source.rs
turbopack/crates/turbopack-core/src/: environment.rs  server_fs.rs
turbopack/crates/turbopack-core/src/chunk/: chunk_group.rs  data.rs
turbopack/crates/turbopack-core/src/introspect/: module.rs  output_asset.rs  source.rs  utils.rs
turbopack/crates/turbopack-core/src/module_graph/: async_module_info.rs  chunk_group_info.rs  mod.rs  module_batches.rs
turbopack/crates/turbopack-core/src/reference/: mod.rs  source_map.rs
turbopack/crates/turbopack-core/src/resolve/: mod.rs  node.rs  options.rs  origin.rs  parse.rs  pattern.rs  remap.rs
turbopack/crates/turbopack-css/src/: asset.rs  module_asset.rs
turbopack/crates/turbopack-dev-server/src/: html.rs
turbopack/crates/turbopack-ecmascript/: Cargo.toml
turbopack/crates/turbopack-ecmascript-runtime/src/: asset_context.rs  browser_runtime.rs  nodejs_runtime.rs
turbopack/crates/turbopack-ecmascript/src/: chunk_group_files_asset.rs  lib.rs  parse.rs  utils.rs
turbopack/crates/turbopack-env/src/: asset.rs  dotenv.rs
turbopack/crates/turbopack-json/src/: lib.rs
turbopack/crates/turbopack-mdx/src/: lib.rs
turbopack/crates/turbopack-node/src/: evaluate.rs  lib.rs
turbopack/crates/turbopack-nodejs/src/: chunking_context.rs
turbopack/crates/turbopack-resolve/src/: ecmascript.rs  node_native_binding.rs  resolve.rs  typescript.rs
turbopack/crates/turbopack-static/src/: lib.rs
turbopack/crates/turbopack-tests/tests/: execution.rs  snapshot.rs
turbopack/crates/turbopack-wasm/src/: loader.rs  module_asset.rs  output_asset.rs  raw.rs  source.rs
turbopack/crates/turbopack/src/: evaluate_context.rs  global_module_ids.rs  lib.rs
(+90 files in other folders)
